@@ -2,6 +2,7 @@ package greencity.service.ubs;
 
 import com.netflix.hystrix.exception.HystrixRuntimeException;
 import greencity.client.UserRemoteClient;
+import greencity.client.config.UserRemoteWebClient;
 import greencity.constant.AppConstant;
 import greencity.constant.ErrorMessage;
 import greencity.dto.employee.EmployeeWithTariffsIdDto;
@@ -16,10 +17,12 @@ import greencity.dto.tariff.GetTariffInfoForEmployeeDto;
 import greencity.dto.tariff.TariffWithChatAccess;
 import greencity.entity.TariffsInfoRecievingEmployee;
 import greencity.entity.order.TariffsInfo;
+import greencity.entity.user.User;
 import greencity.entity.user.employee.Employee;
 import greencity.entity.user.employee.EmployeeFilterView;
 import greencity.entity.user.employee.Position;
 import greencity.enums.EmployeeStatus;
+import greencity.enums.UserStatus;
 import greencity.exceptions.BadRequestException;
 import greencity.exceptions.NotFoundException;
 import greencity.exceptions.UnprocessableEntityException;
@@ -34,9 +37,15 @@ import greencity.repository.UserRepository;
 import greencity.repository.TariffsInfoRepository;
 import greencity.repository.EmployeeOrderPositionRepository;
 import greencity.service.phone.UAPhoneNumberUtil;
+import greencity.service.ubs.user.UserService;
 import lombok.Data;
+import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
-import org.springframework.data.domain.*;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 import jakarta.transaction.Transactional;
@@ -44,11 +53,14 @@ import java.util.List;
 import java.util.ArrayList;
 import java.util.Map;
 import java.util.LinkedHashMap;
+import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
+import org.springframework.web.reactive.function.client.WebClientRequestException;
+import org.springframework.web.reactive.function.client.WebClientResponseException;
 
 @Service
 @Data
+@Slf4j
 public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeService {
     private final EmployeeRepository employeeRepository;
     private final PositionRepository positionRepository;
@@ -56,10 +68,11 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
     private final ReceivingStationRepository stationRepository;
     private final TariffsInfoRepository tariffsInfoRepository;
     private final UserRemoteClient userRemoteClient;
-    private final FileService fileService;
+    private final UserRemoteWebClient userRemoteWebClient;
     private final ModelMapper modelMapper;
     private final EmployeeCriteriaRepository employeeCriteriaRepository;
     private final EmployeeOrderPositionRepository employeeOrderPositionRepository;
+    private final UserService userService;
     private String defaultImagePath = AppConstant.DEFAULT_IMAGE;
 
     /**
@@ -87,12 +100,21 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
             employeeRepository.save(employee);
             return employeeWithTariffsDto;
         }
-        checkValidPosition(dto.getEmployeeDto().getEmployeePositions());
+        checkValidPosition(dto.getEmployeeDto().getEmployeePositionIds());
 
         Employee employee = buildEmployeeFromEmployeeWithTariffsIdDto(dto);
         employee.setUuid(UUID.randomUUID().toString());
         employee.setEmployeeStatus(EmployeeStatus.ACTIVE);
-        employee.setImagePath(image != null ? fileService.upload(image) : defaultImagePath);
+        if (image != null) {
+            try {
+                employee.setImagePath(userRemoteWebClient.uploadFile(image));
+            } catch (WebClientRequestException | WebClientResponseException e) {
+                log.warn(AppConstant.USER_SERVICE_UNAVAILABLE_LOG, e.getMessage());
+            }
+        } else {
+            employee.setImagePath(defaultImagePath);
+        }
+
         if (employee.getTariffsInfoReceivingEmployees() == null) {
             employee.setTariffsInfoReceivingEmployees(new ArrayList<>());
         }
@@ -118,13 +140,8 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
             .lastName(employeeWithTariffsIdDto.getEmployeeDto().getLastName())
             .phoneNumber(employeeWithTariffsIdDto.getEmployeeDto().getPhoneNumber())
             .email(employeeWithTariffsIdDto.getEmployeeDto().getEmail())
-            .employeePosition(employeeWithTariffsIdDto.getEmployeeDto().getEmployeePositions().stream()
-                .map(positionDto -> Position.builder()
-                    .id(positionDto.getId())
-                    .nameUk(positionDto.getNameUk())
-                    .nameEn(positionDto.getNameEn())
-                    .build())
-                .collect(Collectors.toSet()))
+            .employeePosition(
+                positionRepository.findByIdIn((employeeWithTariffsIdDto.getEmployeeDto().getEmployeePositionIds())))
             .build();
     }
 
@@ -139,11 +156,11 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
                     .nameUk(position.getNameUk())
                     .nameEn(position.getNameEn())
                     .build())
-                .collect(Collectors.toList()))
+                .toList())
             .isUbs(true)
             .build();
         try {
-            userRemoteClient.signUpEmployee(signUpDto);
+            userRemoteClient.signUpEmployee(signUpDto, "uk");
         } catch (HystrixRuntimeException e) {
             throw new BadRequestException(
                 "Error to create user(): User with this email already exists or not valid data ");
@@ -156,23 +173,23 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
     @Override
     public PageableDto<GetEmployeeDto> findAll(EmployeePage employeePage, EmployeeFilterCriteria filterCriteria) {
         List<EmployeeFilterView> employeeFilterViews = employeeCriteriaRepository.findAll(employeePage, filterCriteria);
-        List<GetEmployeeDto> resultList = mapEmployeeFilterViewsToGetEmployeeDtos(employeeFilterViews);
+        List<GetEmployeeDto> resultList = mapEmployeeFilterViewsToGetEmployeeDTOs(employeeFilterViews);
         Pageable pageable = getPageable(employeePage);
         return getAllTranslationDto(new PageImpl<>(resultList, pageable, employeeFilterViews.size()));
     }
 
-    private List<GetEmployeeDto> mapEmployeeFilterViewsToGetEmployeeDtos(List<EmployeeFilterView> employeeFilterViews) {
+    private List<GetEmployeeDto> mapEmployeeFilterViewsToGetEmployeeDTOs(List<EmployeeFilterView> employeeFilterViews) {
         List<Employee> employees = employeeRepository.findAll();
         Map<Long, GetEmployeeDto> getEmployeeDtoMap = new LinkedHashMap<>();
-        for (var employeeFilterView : employeeFilterViews) {
-            var getEmployeeDto = getEmployeeDtoMap.computeIfAbsent(employeeFilterView.getEmployeeId(),
+        for (EmployeeFilterView employeeFilterView : employeeFilterViews) {
+            GetEmployeeDto getEmployeeDto = getEmployeeDtoMap.computeIfAbsent(employeeFilterView.getEmployeeId(),
                 id -> modelMapper.map(employeeFilterView, GetEmployeeDto.class));
             getEmployeeDto.setTariffs(employees.stream()
                 .filter(employee -> employee.getId().equals(employeeFilterView.getEmployeeId()))
                 .flatMap(employee -> employee.getTariffsInfoReceivingEmployees().stream()
                     .map(tariffsInfoRecievingEmployee -> modelMapper.map(tariffsInfoRecievingEmployee.getTariffsInfo(),
                         GetTariffInfoForEmployeeDto.class)))
-                .collect(Collectors.toList()));
+                .toList());
             initializeGetEmployeeDtoCollections(getEmployeeDto);
             fillGetEmployeeDto(employeeFilterView, getEmployeeDto, employees);
         }
@@ -191,13 +208,13 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
     }
 
     private void fillPositionDto(EmployeeFilterView emplView, GetEmployeeDto getEmployeeDto, List<Employee> employees) {
-        List<PositionDto> positionsDtos = employees.stream()
+        List<PositionDto> positionsDTOs = employees.stream()
             .filter(employee -> employee.getId().equals(emplView.getEmployeeId()))
             .flatMap(employee -> employee.getEmployeePosition().stream()
                 .map(position -> modelMapper.map(position, PositionDto.class)))
             .toList();
 
-        getEmployeeDto.getEmployeePositions().addAll(positionsDtos);
+        getEmployeeDto.getEmployeePositions().addAll(positionsDTOs);
     }
 
     private void fillGetTariffInfoForEmployeeDto(
@@ -212,7 +229,7 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
                     tariffDto.setHasChat(tariffsInfoRecievingEmployee.getHasChat());
                     return tariffDto;
                 }))
-            .collect(Collectors.toList());
+            .toList();
 
         getEmployeeDto.setTariffs(tariffs);
     }
@@ -223,9 +240,9 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
     }
 
     private PageableDto<GetEmployeeDto> getAllTranslationDto(Page<GetEmployeeDto> pages) {
-        List<GetEmployeeDto> getEmployeeDtos = pages.getContent();
+        List<GetEmployeeDto> getEmployeeDTOs = pages.getContent();
         return new PageableDto<>(
-            getEmployeeDtos,
+            getEmployeeDTOs,
             pages.getTotalElements(),
             pages.getPageable().getPageNumber(),
             pages.getTotalPages());
@@ -245,7 +262,7 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
             throw new BadRequestException(
                 "Email already exist in another employee: " + dto.getEmployeeDto().getEmail());
         }
-        checkValidPosition(dto.getEmployeeDto().getEmployeePositions());
+        checkValidPosition(dto.getEmployeeDto().getEmployeePositionIds());
         dto.getEmployeeDto()
             .setPhoneNumber(UAPhoneNumberUtil.getE164PhoneNumberFormat(dto.getEmployeeDto().getPhoneNumber()));
         updateEmployeeEmail(dto, upEmployee.getUuid());
@@ -271,9 +288,17 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
 
         if (image != null) {
             String imageUrlToDelete = upEmployee.getImagePath();
-            updatedEmployee.setImagePath(fileService.upload(image));
+            try {
+                updatedEmployee.setImagePath(userRemoteWebClient.uploadFile(image));
+            } catch (WebClientRequestException | WebClientResponseException e) {
+                log.warn(AppConstant.USER_SERVICE_UNAVAILABLE_LOG, e.getMessage());
+            }
             if (!imageUrlToDelete.equals(defaultImagePath)) {
-                fileService.delete(upEmployee.getImagePath());
+                try {
+                    userRemoteWebClient.deleteFile(imageUrlToDelete);
+                } catch (WebClientRequestException | WebClientResponseException e) {
+                    log.warn(AppConstant.USER_SERVICE_UNAVAILABLE_LOG, e.getMessage());
+                }
             }
         } else {
             updatedEmployee.setImagePath(dto.getEmployeeDto().getImage());
@@ -296,11 +321,13 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
     }
 
     private void updateEmployeeAuthoritiesToRelatedPositions(EmployeeWithTariffsIdDto dto) {
-        var positions = EmployeePositionsDto.builder()
+        Set<Position> positions = positionRepository.findByIdIn(dto.getEmployeeDto().getEmployeePositionIds());
+
+        EmployeePositionsDto employeePositionsDto = EmployeePositionsDto.builder()
             .email(dto.getEmployeeDto().getEmail())
-            .positions(dto.getEmployeeDto().getEmployeePositions())
+            .positions(positions.stream().map(position -> modelMapper.map(position, PositionDto.class)).toList())
             .build();
-        userRemoteClient.updateAuthoritiesToRelatedPositions(positions);
+        userRemoteClient.updateAuthoritiesToRelatedPositions(employeePositionsDto);
     }
 
     /**
@@ -308,36 +335,21 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
      */
     @Override
     @Transactional
-    public void deactivateEmployee(Long id) {
-        Employee employee = employeeRepository.findById(id)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.EMPLOYEE_NOT_FOUND + id));
-        if (employee.getEmployeeStatus().equals(EmployeeStatus.ACTIVE)) {
-            employee.setEmployeeStatus(EmployeeStatus.INACTIVE);
-            try {
-                userRemoteClient.deactivateEmployee(employee.getUuid());
-            } catch (HystrixRuntimeException e) {
-                throw new BadRequestException(ErrorMessage.EMPLOYEE_WITH_UUID_NOT_FOUND + employee.getUuid());
-            }
-            employeeRepository.save(employee);
-        }
-    }
+    public void updateEmployeeStatus(String currentUserUuid, Long targetEmployeeId, EmployeeStatus employeeStatus) {
+        Employee employee = employeeRepository.findById(targetEmployeeId)
+            .orElseThrow(() -> new NotFoundException(ErrorMessage.EMPLOYEE_NOT_FOUND + targetEmployeeId));
 
-    /**
-     * {@inheritDoc}
-     */
-    @Override
-    @Transactional
-    public void activateEmployee(Long id) {
-        Employee employee = employeeRepository.findById(id)
-            .orElseThrow(() -> new NotFoundException(ErrorMessage.EMPLOYEE_NOT_FOUND + id));
-        if (employee.getEmployeeStatus() == EmployeeStatus.INACTIVE) {
-            employee.setEmployeeStatus(EmployeeStatus.ACTIVE);
-            try {
-                userRemoteClient.activateEmployee(employee.getUuid());
-            } catch (HystrixRuntimeException e) {
-                throw new BadRequestException(ErrorMessage.EMPLOYEE_WITH_UUID_NOT_FOUND + employee.getUuid());
-            }
+        if (!employee.getEmployeeStatus().equals(employeeStatus)) {
+            User employeeUser = userRepository.findUserByUuid(employee.getUuid())
+                .orElseThrow(() -> new NotFoundException(ErrorMessage.USER_NOT_FOUND_BY_UUID + employee.getUuid()));
+            UserStatus userStatus = switch (employeeStatus) {
+                case ACTIVE -> UserStatus.ACTIVATED;
+                case INACTIVE -> UserStatus.DEACTIVATED;
+            };
+
+            employee.setEmployeeStatus(employeeStatus);
             employeeRepository.save(employee);
+            userService.updateUserStatusById(currentUserUuid, employeeUser.getId(), userStatus);
         }
     }
 
@@ -350,7 +362,11 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         Employee employee = employeeRepository.findById(id)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.EMPLOYEE_NOT_FOUND + id));
         if (!employee.getImagePath().equals(defaultImagePath)) {
-            fileService.delete(employee.getImagePath());
+            try {
+                userRemoteWebClient.deleteFile(employee.getImagePath());
+            } catch (WebClientRequestException | WebClientResponseException e) {
+                log.warn(AppConstant.USER_SERVICE_UNAVAILABLE_LOG, e.getMessage());
+            }
             employee.setImagePath(defaultImagePath);
             employeeRepository.save(employee);
         } else {
@@ -384,7 +400,7 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
     public List<PositionDto> getAllPositions() {
         return positionRepository.findAll().stream()
             .map(p -> modelMapper.map(p, PositionDto.class))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -415,15 +431,15 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         }
     }
 
-    private void checkValidPosition(List<PositionDto> positions) {
-        if (!existPositions(positions)) {
+    private void checkValidPosition(Set<Long> positionIds) {
+        if (!existPositions(positionIds)) {
             throw new NotFoundException(ErrorMessage.POSITION_NOT_FOUND);
         }
     }
 
-    private boolean existPositions(List<PositionDto> positions) {
-        return positions.stream()
-            .allMatch(p -> positionRepository.existsPositionByIdAndNameUk(p.getId(), p.getNameUk()));
+    private boolean existPositions(Set<Long> positionIds) {
+        return positionIds.stream()
+            .allMatch(positionRepository::existsById);
     }
 
     /**
@@ -435,7 +451,7 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         return tariffs
             .stream()
             .map(tariffsInfo -> modelMapper.map(tariffsInfo, GetTariffInfoForEmployeeDto.class))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -446,10 +462,14 @@ public class UBSManagementEmployeeServiceImpl implements UBSManagementEmployeeSe
         List<Employee> employeeWithEnabledChat =
             employeeRepository.selectAllEmployeesByTariffIdAndChatEqualsTrue(tariffId);
 
+        if (employeeWithEnabledChat.isEmpty()) {
+            throw new NotFoundException(ErrorMessage.EMPLOYEE_WITH_ENABLED_CHAT_NOT_FOUND_BY_TARIFF_ID + tariffId);
+        }
+
         return employeeWithEnabledChat
             .stream()
             .map(employee -> modelMapper.map(employee, EmployeeWithTariffsDto.class))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
